# jtmorrisbytes

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  README.md  angular.json  app.json  deploy_rsa.enc  introToWebsite.js  nginx.conf  package-lock.json  package.json  server.ts  status  the-angular-experiment.code-workspace  tsconfig.json  typings.d.ts
accounting_db/: Cargo.toml
accounting_db/accounting_proc_macro/: Cargo.toml
accounting_db/accounting_proc_macro/src/: lib.rs
accounting_db/migrations/: 20260309203758_init_db.sql  Cargo.toml
accounting_db/migrations/src/: lib.rs  main.rs  reflect.rs  v1_initdb.rs
accounting_db/migrations/src/reflect/: any.rs  mod.rs  sqlite.rs
accounting_db/migrations/src/user_multitenant/: mod.rs  v1_initdb.rs
accounting_db/src/: lib.rs  registry.rs
accounting_db/src/core/: mod.rs  models.rs
accounting_db/src/drivers/: mod.rs  mysql.rs  postgres.rs  sqlite.rs
accounting_db/src/drivers/migrations/: mod.rs  v1_initdb.rs
accounting_db/src/drivers/migrations/user_multitenant/: mod.rs  v1_initdb.rs
accounting_db/src/scripts/mysql/user/: insert.sql
accounting_db/src/scripts/sqlite/user/: get_one.sql  insert.sql  insert_many.sql  insert_with_returning.sql  update.sql
accounting_db/src/user/: mod.rs
app/: Cargo.toml
chrome_devtools_protocol/: Cargo.toml
chrome_devtools_protocol_parser_and_builder/: Cargo.toml
chrome_devtools_protocol_parser_and_builder/src/: main.rs
docs/: basic_website_Design.md  landing-page-ideas.md  site-theme.md  url-access-model.md
docs/design/: Color palette by Paletton.com.html  Color palette by Paletton.comv2.html
docs/design/header/: jtmorrisbytes-logo.xcf  trickling pixels-320x100.xcf
e2e/src/: app.e2e-spec.ts
jtmb-reflect-db/: Cargo.toml
jtmb-reflect-db/src/: lib.rs
jtmb-reflect-db/src/drivers/: any.rs  mod.rs  sqlite.rs
notes/: url-access-model.md  what-if.txt
scripts/: build-deployment.sh  build-dev.sh  deploy.sh  preinstall.js  preinstall.sh  test-dev.sh
src/: READ THIS TO FIX REQUIRE.txt  global.config.ts  grid.scss  index.html  main.server.ts  styles.scss  tsconfig.app.json  tsconfig.server.json
src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.config.ts  app.module.ts
src/app/assets/: test.json
src/app/components/errors/e404/: e404.component.html  e404.component.ts
src/app/components/errors/e500/: e500.component.html  e500.component.ts
src/app/components/nav-main/: data.json  links.json  nav-main.component.html  nav-main.component.scss  nav-main.component.spec.ts  nav-main.component.ts
src/app/components/pages/about/: about.component.ts
src/app/components/pages/home/: home.component.html  home.component.scss  home.component.spec.ts  home.component.ts
src/app/components/projects/: projects.module.ts
src/app/components/projects/index/: index.component.spec.ts  index.component.ts
src/app/data/: app.config.json  app.config.ts  routes.json
src/app/goats/sacrifical-goat/: sacrifical-goat.module.ts
src/app/goats/sacrifical-goat/black-baby-goat/: black-baby-goat.component.html  black-baby-goat.component.spec.ts  black-baby-goat.component.ts
src/app/goats/sacrifical-goat/sacrificial-lamb/: sacrificial-lamb.module.ts
src/app/goats/sacrifical-goat/sacrificial-lamb/green-lamb/: green-lamb.component.html  green-lamb.component.spec.ts  green-lamb.component.ts
src/app/goats/sacrifical-goat/sacrificial-lamb/red-lamb/: red-lamb.component.html  red-lamb.component.spec.ts  red-lamb.component.ts
src/app/goats/sacrifical-goat/white-baby-goat/: white-baby-goat.component.html  white-baby-goat.component.spec.ts  white-baby-goat.component.ts
src/app/home/: home.component.html
src/app/lib/Error/: Error.ts
src/app/lib/navigation/: INavigationComponent.ts  INavigationModule.ts  INavigationTree.ts  navigationTree.json
src/app/lib/page/: IErrorPage.ts  ipage.ts  page.ts
src/app/nav-main/: nav-main.component.html  nav-main.component.scss  nav-main.component.ts
src/app/page-not-found/: page-not-found.component.html
src/app/pages/: app-pages.module.ts  ipage.ts  page.ts
src/app/pages/e404/: e404.component.ts
src/app/pages/e500/: e500.component.ts
src/app/pages/home/: home.component.html  home.component.ts
src/app/pages/projects/: projects.component.ts  projects.module.ts
src/app/pages/projects/index/: index.component.ts
src/app/services/: test-service.service.spec.ts  test-service.service.ts
src/app/services/directory/: directory-provider.service.spec.ts  directory-provider.service.ts
src/app/services/mysql/: my-sql.service.spec.ts  my-sql.service.ts
src/app/services/navigation/: navigation-provider.service.spec.ts  navigation-provider.service.ts  navigation-provider.service.ts.bak
src/assets/: routes.json
src/assets/css/: grid.css
src/assets/scripts/: app.js  flowtype.js
src/well-known/acme-challenge/: 0mpb_J0EKcWrg3vvOgSHHGfu0mjM91AdqVbWZoK-B5s
vault/: Cargo.toml
vault/packager/: Cargo.toml
vault/packager/src/: main.rs
vault/service/: Cargo.toml  build.rs
vault/service/src/: main.rs
vault/src/: main.rs
vault/src/lib/: bips.rs  config.rs  crypto.rs  mod.rs  net.rs  print.rs  term.rs  tpm_2_0.rs
vault/src/lib/server/: mod.rs
vault/ui/: Cargo.toml
vault_ci/: Cargo.toml
vault_ci/src/: main.rs
vault_service/: Cargo.toml
vault_service/src/server/: mod.rs
vault_ui/: Cargo.toml
vault_ui/src/: lib.rs
