

[workspace]
members = ["app","accounting_db","accounting_db/accounting_proc_macro","accounting_db/migrations","vault","vault_ui","vault_service",
"vault_ci","chrome_devtools_protocol",
"chrome_devtools_protocol_parser_and_builder"
]
resolver="3"
[workspace.dependencies]
#hot-lib-reloader = "0.8.2"
reqwest = "0.13.2"
rocket = "0.5.1"
sqlx="^0.8"
