[package]
name="accounting_db"
version="0.1.0"
edition="2024"


[features]
sqlite=["sqlx/sqlite"]
postgresql=["sqlx/postgres"]
mysql=["sqlx/mysql"]
default=["sqlite","postgresql","mysql"]
serialize=["serde"]
deserialize=["serde"]


[dependencies]
paste = "1.0.15"
sqlx = {version="^0.7", features=["migrate","uuid","sqlite"]}
uuid={version="1.7",features=["v7"]}
accounting_db_proc_macro={path="./accounting_proc_macro"}
anyhow = "1.0.102"
tokio = { version = "1.50.0", features = ["full"] }
dashmap = "6.1.0"
async-trait = "0.1.89"
serde = { version = "1.0.228", features = ["derive"],optional=true }
