[package]
name="chrome_devtools_protocol_parser_and_builder"
version="0.1.0"
edition="2024"

[dependencies]
anyhow = "1.0.102"
quote = "1.0.45"
reqwest = { workspace = true, features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["io", "io-util"] }
