[package]
name="vault"
version="0.1.0"
edition="2024"
authors=["jthec"]

[lib]
path="src/lib/mod.rs"

[dependencies]
aes-gcm = "0.10.3"
argon2 = "0.5.3"
qrcodegen = "1.8.0"
secrecy = "0.10.3"
zeroize = "1.8.2"
resvg = "0.40"
clap = { version = "4.5.60", features = ["derive"] }
crossterm = "0.29.0"
hyper = { version = "1.8.1", features = ["http1", "server"] }
tokio = { version = "1.49.0", features = ["net", "rt"] }
hyper-util = { version = "0.1.20", features = ["tokio"] }
serde = { version = "1.0.228", features = ["derive"] }
figment = { version = "0.10.19", features = ["toml"] }
toml = "1.0.3"


[dependencies.windows]
version = "0.61.2"
features=[
    "Win32_Security_Tpm",
    "Win32_Foundation",
    "Win32_System_TpmBaseServices", 
    "Win32_Security_Cryptography",
    "Win32_System_Memory",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Printing",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Storage_Xps",
    "Win32_System_Console",
    "Win32_System_Registry",
    "Win32_UI_Shell"
]

