[package]
name="accounting_db_migrations"
version="0.1.0"
edition="2024"

[features]
sqlite=["sqlx/sqlite","barrel/sqlite3"]
postgresql=["sqlx/postgres","barrel/pg"]
mysql=["sqlx/mysql","barrel/mysql"]
default=["sqlite","postgresql","mysql"]
[dependencies]

sqlx = {workspace=true, features=["migrate","uuid","sqlite"]}
#uuid={version="1.7",features=["v7"]}
#accounting_db_proc_macro={path="./accounting_proc_macro"}
anyhow = "1.0.102"
tokio = { version = "1.50.0", features = ["full"] }
#dashmap = "6.1.0"
#async-trait = "0.1.89"
#serde = { version = "1.0.228", features = ["derive"],optional=true }
barrel = "0.7.0"
refinery = "0.9.0"
sea-query = "0.32.7"
reflect-db = "0.1.0"
async-trait = "0.1.89"
