[package]
name="vault_packager"
version="0.1.0"
edition="2024"

[dependencies]
vault={path="../"}
wasmer = {version="7.0.1",features=["cranelift"]}
wasmer-compiler-cranelift = "7.0.1"
cargo_metadata = "0.23.1"
wasm-opt = "0.116.1"
reqwest = { workspace = true, features = ["json"] }
tokio = { version = "1.50.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tar = "0.4.44"
flate2 = "1.1.9"
xz2 = "0.1.7"
zip = "8.2.0"
